--- a/project2/package.json
+++ b/project2/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^4.0.5",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
